--- a/css/all.css
+++ b/css/all.css
@@ -80,6 +80,7 @@ form,fieldset{
 .b-tab{
 	position: relative;
 	overflow: hidden;
+	margin: 0 0 50px;
 	padding: 40px;
 	background: #ccc;
 }
@@ -138,3 +139,65 @@ form,fieldset{
 	left: 242px;
 }
 /*--*/
+/*carousel*/
+.b-carousel__check{
+	position: absolute;
+	bottom: 10px;
+	z-index: 999;
+}
+#b-carousel__1{ left: 10px;}
+#b-carousel__2{ left: 40px;}
+#b-carousel__3{ left: 70px;}
+#b-carousel__4{ left: 100px;}
+#b-carousel__5{ left: 130px;}
+.b-carousel__mask{
+	position: relative;
+	width: 100%;
+	height: 500px;
+	background: #aaa;
+}
+.b-carousel__box{
+	opacity: 0;
+	display: none;
+	position: absolute;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	text-align: center;
+}
+.b-carousel__img{
+	display: inline-block;
+	vertical-align: middle;
+	max-width: 90%;
+	max-height: 90%;
+	height: auto;
+}
+.b-carousel__box:before{
+	content: '';
+	display: inline-block;
+	vertical-align: middle;
+	width: 1px;
+	height: 100%;
+}
+.b-carousel__label{
+	position: absolute;
+	top: 50%;
+	margin: -15px 0 0;
+	font-size: 30px;
+	line-height: 35px;
+	color: #fff;
+	font-weight: bold;
+}
+.b-carousel__label._prev{ left: 10px;}
+.b-carousel__label._next{ right: 10px;}
+.b-carousel__label:hover{
+	cursor: pointer;
+	text-shadow: 0 0 5px #000;
+}
+.b-carousel__check:checked + .b-carousel__box{
+	opacity: 1;
+	z-index: 9;
+	display: table-cell;
+}
