--- a/css/all.css
+++ b/css/all.css
@@ -166,6 +166,8 @@ form,fieldset{
 	top: 0;
 	right: 0;
 	bottom: 0;
+	width: 100%;
+	height: 100%;
 	text-align: center;
 }
 .b-carousel__img{
@@ -239,6 +241,8 @@ form,fieldset{
 	top: 0;
 	right: 0;
 	bottom: 0;
+	width: 100%;
+	height: 100%;
 	background: rgba(0, 0, 0, 0.7);
 	text-align: center;
 	white-space: nowrap;
